# bt2usb

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  maskfile.md  memory_sd.x  memory_sim.x
.cargo/: config.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
renode/: bt2usb-sim.resc  bt2usb-sim.robot
scripts/: install-renode.sh  run-tool.sh
src/: config.rs  error.rs  hid_descriptor_tests.rs  lib.rs  lib_logic_tests.rs  lib_tests.rs  main.rs  power.rs  power_logic.rs  sim.rs  storage.rs
src/ble/: adv_parser.rs  coordinator.rs  coordinator_tests.rs  hid_client.rs  mod.rs  multi_conn.rs  reconnect.rs  scanner.rs
src/hid/: coalesce.rs  consumer.rs  keyboard.rs  mod.rs  mouse.rs  report_protocol.rs  tests.rs
src/storage/: codec.rs  framing.rs
src/ui/: buttons.rs  display.rs  input_logic.rs  mod.rs  ui_logic.rs
src/usb/: hid_device.rs  mod.rs
tests/: integration.rs
