[package]
name = "bt2usb"
version = "0.1.0"
edition = "2021"
authors = ["bt2usb contributors"]
description = "Bluetooth-to-USB HID bridge for nRF52840 - converts BLE keyboard/mouse input to USB HID output"
license = "MIT"
readme = "README.md"
keywords = ["bluetooth", "usb", "hid", "kvm", "embedded", "nrf52840"]
categories = ["embedded", "no-std", "hardware-support"]

# Library for host-based unit tests (HID parsing logic)
[lib]
name = "bt2usb"
path = "src/lib.rs"

# Embedded binary (requires nRF52840 + probe-rs)
[[bin]]
name = "bt2usb"
path = "src/main.rs"
required-features = ["embedded"]

[features]
default = []
# Enable full embedded build (Embassy, SoftDevice, USB)
embedded = ["dep:embassy-executor", "dep:embassy-nrf", "dep:embassy-time", 
            "dep:embassy-usb", "dep:embassy-sync", "dep:embassy-futures",
            "dep:nrf-softdevice", "dep:nrf-softdevice-s140",
            "dep:usbd-hid", "dep:ssd1306", "dep:embedded-graphics",
            "dep:cortex-m", "dep:cortex-m-rt", "dep:embedded-hal", "dep:embedded-hal-async",
            "dep:sequential-storage", "dep:embedded-storage-async",
            "dep:defmt", "dep:defmt-rtt", "dep:panic-probe", 
            "dep:static_cell", "dep:heapless", "defmt"]
# Enable defmt formatting (for embedded builds)
defmt = ["dep:defmt"]

[dependencies]
# - Embassy async runtime & HAL (embedded only) ---------------
embassy-executor  = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"], optional = true }
embassy-nrf       = { version = "0.3", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac"], optional = true }
embassy-time      = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-usb       = { version = "0.4", features = ["defmt"], optional = true }
embassy-sync      = { version = "0.7", features = ["defmt"], optional = true }
embassy-futures   = { version = "0.1", optional = true }

# - BLE (Nordic SoftDevice S140) (embedded only) ---------------
nrf-softdevice    = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["defmt", "nrf52840", "s140", "ble-central", "ble-gatt-client", "ble-sec", "critical-section-impl"], optional = true }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice", optional = true }

# - USB HID (embedded only) -------------------------
usbd-hid          = { version = "0.8", optional = true }

# - Display (SSD1306 OLED) (embedded only) ------------------
ssd1306           = { version = "0.9", optional = true }
embedded-graphics = { version = "0.8", optional = true }

# - Embedded core (embedded only) ----------------------
cortex-m          = { version = "0.7", features = ["inline-asm"], optional = true }
cortex-m-rt       = { version = "0.7", optional = true }
embedded-hal      = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }

# - Flash storage (embedded only) ----------------------
sequential-storage = { version = "3", optional = true }
embedded-storage-async = { version = "0.4", optional = true }

# - Logging & diagnostics (embedded only) ------------------
defmt             = { version = "0.3", optional = true }
defmt-rtt         = { version = "0.4", optional = true }
panic-probe       = { version = "0.3", features = ["print-defmt"], optional = true }

# - Utilities (embedded only) ------------------------
static_cell       = { version = "2", optional = true }
heapless          = { version = "0.8", features = ["defmt-03"], optional = true }

[dev-dependencies]
heapless = { version = "0.8" }

[profile.release]
codegen-units = 1
debug         = 2        # keep DWARF for probe-rs
lto           = "fat"
opt-level     = "s"      # optimize for size
incremental   = false

[profile.dev]
opt-level = 1            # some optimization even in debug (required by softdevice timing)
